--- a/Java/pom.xml
+++ b/Java/pom.xml
@@ -8,10 +8,12 @@
 	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
-	<properties>
-		<java.version>17</java.version>
-		<spring.boot.version>3.0.0</spring.boot.version>
-	</properties>
+    <properties>
+        <java.version>17</java.version>
+        <spring.boot.version>3.0.0</spring.boot.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+    </properties>
 
 	<dependencies>
 		<!-- Spring Boot Starters -->
@@ -72,6 +74,11 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.1.0</version>
+		</dependency>
 
 		<!-- Servlet API (Provided by Servlet Container) -->
 <!--		<dependency>-->
