--- a/Java/src/main/resources/application.properties
+++ b/Java/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=Java
 #Db configs
 spring.datasource.url=jdbc:mysql://localhost:3306/nationalb
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=mtxc2005
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
@@ -13,3 +13,12 @@ spring.mail.username=your-email@example.com
 spring.mail.password=email-password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#swagger apis
+server.port=8080
+openapi.service.url=http://localhost:8080
+openapi.service.title=Banking system API Documentation
+openapi.service.version=1.0.0
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.operationsSorter=method
