--- a/Java/src/main/resources/application.properties
+++ b/Java/src/main/resources/application.properties
@@ -7,10 +7,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 # Email configuration
-spring.mail.host=smtp.example.com
+spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=your-email@example.com
-spring.mail.password=email-password
+spring.mail.username=rcaclassof2024@gmail.com
+spring.mail.password=dmybkumaptwcosht
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
